Refactor project, add pagination
