# docs/swagger.json
@@ -23,6 +23,18 @@
                 "tags": [
                     "events"
                 ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "size",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -143,33 +155,28 @@
                 ],
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Faculty Name",
-                        "name": "name",
+                        "type": "integer",
+                        "name": "budget",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Faculty Country",
-                        "name": "country",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Faculty City",
                         "name": "city",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Faculty Domain",
+                        "name": "country",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "name": "domain",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Faculty Budget",
-                        "name": "budget",
+                        "name": "name",
                         "in": "query"
                     }
                 ],
@@ -354,20 +361,17 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "University Name",
-                        "name": "name",
+                        "name": "city",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "University Country",
                         "name": "country",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "University City",
-                        "name": "city",
+                        "name": "name",
                         "in": "query"
                     }
                 ],
@@ -539,6 +543,18 @@
                 ],
                 "tags": [
                     "users"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "size",
+                        "in": "query"
+                    }
                 ],
                 "responses": {
                     "200": {
@@ -967,6 +983,12 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "updated_at": {
                     "type": "string"
